--- a/templates/tag_cloud.html
+++ b/templates/tag_cloud.html
@@ -22,10 +22,14 @@
         box-shadow: 3px 3px 4px #000;
       }
 
-      .gap {
-        margin: 8px; 0px;
+      .heading_gap {
+        margin-bottom: 5px;
       }
 
+      .tagcloud {
+        border: 1px solid gray;
+        padding: 12px;
+      }
     </style>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -68,9 +72,9 @@
     		  <div style="text-align: center;">	
     			 
            <form id="artist" method="post" class="well form-search">
-    		    	 <input type="text" name="artist" class="span3" placeholder="Enter artist name" value="{{artist.name}}">
+            	 <input type="text" name="artist" class="span4" placeholder="Enter artist name" value="{{artist.name}}">
+               <button class="btn btn-primary" type="button">Go!</button>
                <input type="hidden" name="artist_id">
-               <input type="submit" value="Get Tags" class="btn btn-primary">
     			</form>
 
     		  </div>
@@ -79,7 +83,7 @@
 	  
     {% if word_cloud %}
 
-    <div class="row-fluid well">
+    <div class="row-fluid well" style="width: auto;">
       <div class="span4">
         
           <div class="span12">
@@ -87,10 +91,10 @@
             <img class="shadow" src="{{artist.image_url}}">
 
             <br><br>
-            <h3>Biography</h3>
-            <blockquote class="gap">{{artist.bio}}</blockquote>
+            <h3 class="heading_gap">Biography</h3>
+            <blockquote>{{artist.bio}}</blockquote>
 
-            <h3>Tags</h3>
+            <h3 class="heading_gap">Tags</h3>
 
             {% for tag in artist.tags %}
               <span class="label">{{tag}}</span>
@@ -99,7 +103,8 @@
         
       </div>
       <div class="span6">
-  	    <div style="text-align: center;" id="tagcloud">	
+        <h3 class="heading_gap">Lyric Cloud</h3>
+  	    <div style="text-align: center;" id="tagcloud" class="tagcloud">	
         </div>
       </div>
     </div>
@@ -139,7 +144,7 @@
 	
 	<script>
 	  var fontSize = d3.scale.log().range([10, 100]);
-		d3.layout.cloud().size([300, 300])
+		d3.layout.cloud().size([500, 300])
 	      .words(word_cloud)
 	      .rotate(function() { return ~~(Math.random() * 2) * 90; })
 	      .fontSize(function(d) { return d.size; })
@@ -149,7 +154,7 @@
 	  
 		function draw(words) {
      d3.select("#tagcloud").append("svg")
-     .attr("width", 300)
+     .attr("width", 500)
      .attr("height", 300)
      .append("g")
      .attr("transform", "translate(150,150)")
